--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,31 @@ php:
     - 5.3
     - 5.4
 
+
+sudo: true	
+	
 env:
     - WP_VERSION=latest WP_MULTISITE=0
     - WP_VERSION=latest WP_MULTISITE=1
     - WP_VERSION=3.8 WP_MULTISITE=0
     - WP_VERSION=3.8 WP_MULTISITE=1
 
+addons:
+  hosts:
+    - api.openweathermap.org
+	
 before_script:
-    - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
+	- sudo apt-get update
+	- sudo apt-get install apache2 libapache2-mod-fastcgi
+	# enable php-fpm
+	- sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
+	- sudo a2enmod rewrite actions fastcgi alias
+	- echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+	- ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
+	# configure apache virtual hosts
+	- sudo cp -f tests/build/travis-ci-apache /etc/apache2/sites-available/default
+	- sudo sed -e "s?%TRAVIS_BUILD_DIR%?$(pwd)?g" --in-place /etc/apache2/sites-available/default
+	- sudo service apache2 restart
+	- bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
 
 script: phpunit
