--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,6 @@ before_script:
   - sudo service apache2 restart
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION 
   - php tests/tools/build-api.php
+  - cat tests/api.openweather.org/data/2.5/forecast/daily
 
 script: phpunit
